--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,6 @@
   <body>
     <redoc spec-url="./swagger.json">
     </redoc>
-    <script src="//rebilly.github.io/ReDoc/releases/v1.x.x/redoc.min.js"> </script>
+    <script src="https://rebilly.github.io/ReDoc/releases/latest/redoc.min.js"> </script>
   </body>
 </html>
