--- a/web/index.html
+++ b/web/index.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Gateway API Specification</title>
+    <!-- needed for adaptive design -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<head>
-  <title>Checkout.com API Reference</title>
-  <!-- needed for adaptive design -->
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700" rel="stylesheet">
-
-  <!--
-    ReDoc doesn't change outer page styles
+    <!--
+    ReDoc uses font options from the parent element
+    So override default browser styles
     -->
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-    }
-  </style>
-</head>
-
-<body>
-  <redoc spec-url="./swagger.json"></redoc>
-  <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>
-</body>
-
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <redoc spec-url="./swagger.json">
+    </redoc>
+    <script src="https://rebilly.github.io/ReDoc/releases/latest/redoc.min.js"> </script>
+  </body>
 </html>
